force-app/main/default/objects/PAX_Flown_Summary__c/PAX_Flown_Summary__c.object-meta.xml
<CustomObject>
    <label>PAX Flown Summary</label>
    <nameField>
        <label>PAX Flown Month</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PAX Flown Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>