force-app/main/default/objects/PAX_Flown_Summary__c/fields/Data_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Date__c</fullName>
    <label>Data Date</label>
    <type>Date</type>
</CustomField>