force-app/main/default/objects/PAX_Flown_Summary__c/fields/Data_Date_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Date_Key__c</fullName>
    <description>yyyy-MM-dd example 2017-02-01. Always put day = 01</description>
    <externalId>true</externalId>
    <label>Data Date Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>