force-app/main/default/objects/PAX_Flown_Summary__c/fields/Total_Passengers__c.field-meta.xml
<CustomField>
    <fullName>Total_Passengers__c</fullName>
    <label>Total Passengers</label>
    <summarizedField>PAX_Flown_Detail__c.Total_Passengers__c</summarizedField>
    <summaryForeignKey>PAX_Flown_Detail__c.PAX_Flown_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>