force-app/main/default/objects/PAX_Flown_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Data_Date__c</columns>
    <columns>Data_Date_Key__c</columns>
    <columns>Total_Passengers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>